# BBB-BM-Lights-2015

./: .gitignore  CMakeLists.txt  ColorMan.cpp  ColorMan.h  GLSL Notes.md  Makefile  README.md  TCLControl.cpp  TCLControl.h  animation.cpp  animation.h  button.cpp  button.h  cat.cpp  cat.h  clutter_window  clutter_window.service  color.cpp  color.h  configurations.h  events.cpp  events.h  main.cpp  my-bbb-image-build-notes.md  onscreen.cpp  onscreen.h  sensatron.cpp  sensatron.h
audio-fft/: build.sh  main  main.c
cmake/: FindCairo.cmake  FindClutter.cmake  FindGlib.cmake
shaders/: 1ours_1timer.frag  1ours_2timer.frag  1ours_fractal1.frag  1ours_james01.frag  1ours_led_test.frag  1ours_swirl1.frag  1ours_wiggle_power.frag  audio.frag  basic.frag  blob1.frag  blob2.frag  blob3.frag  circle_pulse.frag  circles.frag  dots.frag  flame.txt  james01.frag  jason01.frag  jellybrat.frag  lsd.frag  plasma.frag  plasma2.frag  plasma3.frag  plasma4.frag  plasma5.frag  plasma6.frag  plasma7.frag  plasma8.frag  plasma9.frag  plasmaa.frag  plasmac.frag  smoke.frag  spinning_lights.frag  sunset.frag  target.frag  triangles.frag  trippy_triangles.frag  tunnel1.frag  tunnel2.frag  tunnel3.frag  (+3 more)
shaders/badshaders/: flame.frag  shimmer1.frag
shaders/to_improve/: plasmab.frag  portal1.frag
src/: AnimationHelpers.cpp  AnimationHelpers.h  TCLControl.h  alsa.cpp  alsa.h  animation.cpp  animation.h  button.cpp  button.h  cat.h  configurations.h  events.cpp  events.h  fft.cpp  fft.h  main.cpp  sensatron-effect.c  sensatron-effect.cpp  sensatron-effect.h
